<resources>
    <string name="app_name">Onlinejudge</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="task">进行中</string>
    <string name="project">已截止</string>
    <string name="note">草稿箱</string>
    <string name="new_task">新建任务</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_project">新建项目</string>
    <string name="edit_project">Edit project</string>
    <string name="what_to_do">描述</string>
    <string name="kinds">任务分类：</string>
    <string name="kind">分类</string>
    <string name="task_level">任务等级：</string>
    <string name="task_levels">任务等级</string>
    <string name="schedule_time">开始时间：</string>
    <string name="schedule_date">计划日期：</string>
    <string name="schedule_dates">计划日期</string>
    <string name="file">归档</string>
    <string name="timer">番茄时钟</string>
    <string name="spend_time">预计用时：</string>
    <string name="spend_times">预计用时</string>
    <string name="pre_remind">提醒时间：</string>
    <string name="remind">提醒</string>
    <string name="remind_save">是否保存修改？</string>
    <string name="kind_of_plan">所属计划：</string>
    <string name="sure">确定</string>
    <string name="research">搜索</string>
    <string name="plan">计划</string>
    <string name="plan_time">计划2小时</string>
    <string name="take_time">已进行</string>
    <string name="new_task_successful">新建任务成功</string>
    <string name="task_modify_successful">修改成功</string>
    <string name="task_not_empty_content">任务名不能为空！</string>
    <string name="task_not_empty_plan_time">请输入计划时间！</string>
    <string name="task_plan_time_illegality">请输入合法的计划时间！</string>
    <string name="get_permission_fail">全部或部分必需权限不可用，可能导致部分功能无法使用！</string>
    <string name="get_permission_success">获取权限成功！</string>
    <string name="delete">删除</string>
    <string name="task_detail">任务详情</string>
    <string name="stop_count_down_time">停止计时</string>
    <string name="tomato_time">番茄时钟</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="start_num">0</string>
    <string name="task_start_remind_default">提前10分钟提醒</string>
    <string name="task_plan_pre">截止时间</string>
    <string name="task_hour">小时</string>
    <string name="task_done">已用</string>
    <string name="task_history">历史任务</string>
    <string name="import_success">导入成功</string>
    <string name="import_failed">导入失败,请检查格式是否正确。</string>
    <string name="exam_title_is_null">题目标题不能为空！</string>
    <array name="kind_list">
        <item>工作</item>
        <item>学习</item>
        <item>生活</item>
        <item>休息</item>
    </array>
    <array name="task_level">
        <item>很重要-很紧急</item>
        <item>很重要-不紧急</item>
        <item>不重要-很紧急</item>
        <item>不重要-不紧急</item>
    </array>
    <array name="task_remind">
        <item>提前10分钟提醒</item>
        <item>提前20分钟提醒</item>
        <item>提前30分钟提醒</item>
        <item>提前1小时提醒</item>
    </array>
    <array name="chart_title">
        <item>周</item>
        <item>月</item>
        <item>季度</item>
        <item>年</item>
    </array>
    <array name="weeks">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </array>
    <array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>
    <array name="quarters">
        <item>Q1</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q4</item>
    </array>
    <array name="years">
        <item>去年</item>
        <item>今年</item>
    </array>
    <string name="new_plan">新建计划</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="plan_not_null">计划不能为空，请重新输入。</string>
    <string name="plan_exist">该计划已存在</string>
    <string name="init_project_name">初始项目</string>
    <string name="init_project_summary">项目描述</string>
    <string name="init_plan_name">计划</string>
    <string name="init_plan_content">计划内容</string>
    <string name="init_task_title">任务标题</string>
    <string name="init_task_content">任务内容</string>
    <string name="init_note_title">我是初始化便签标题</string>
    <string name="init_note_content">我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容，我是很长的初始化便签内容。</string>
    <string name="accomplishProgress">进度</string>
    <string name="more_task">加载任务</string>
    <string name="predict_time">计划时间</string>
    <string name="real_spend_time">实际时间</string>
    <string name="menu_edit">编辑</string>
    <string name="remind_title">您有即将开始的任务</string>
    <array name="time_distribution">
        <item>本日时间分布</item>
        <item>本周时间分布</item>
        <item>本月时间分布</item>
        <item>本季度时间分布</item>
    </array>
    <string name="time_correlation">时间对比</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">关于</string>
    <string name="login_out">退出登录</string>
    <string name="_default">默认</string>
    <string name="commit_detail">提交详情</string>
    <string name="input_ip">输入服务器IP地址</string>
    <string name="ip">IP</string>
    <string name="exam_content">题目内容</string>
    <string name="exam_title">题目标题</string>
    <string name="input_args">输入参数，各参数用逗号分开</string>
    <string name="output_args">输出参数（只能有一个参数）</string>
    <string name="remark">备注</string>
    <string name="commit_count">提交统计：</string>
    <string name="success_count">正确人数：</string>
    <string name="time_err">请输入大于当前时间的时间！</string>
    <string name="to_top">置顶</string>
    <string name="cancel_top">取消置顶</string>
    <string name="pomodo_finish">完成一个番茄时钟</string>
    <string name="pomodo_belong">将时间指定到任务</string>
    <string name="pomodo_title">番茄时钟计时中</string>
    <string name="pomodo_notification_tip">Pomodo</string>
    <string name="net_not_connected">当前网络不可用，请连接网络！</string>
    <string name="tasks">设置IP</string>
    <string name="new_note">新建便签</string>
    <string name="alter_note">修改</string>
    <string name="dataCount">数据统计</string>
    <string name="team">团队</string>
    <string name="setting">设置</string>
    <string name="title">标题</string>
    <string name="planDescription">描述</string>
    <string name="planCycle">计划周期</string>
    <string name="to">至</string>
    <string name="content">内容</string>
    <string name="main">西可土豆</string>
    <string name="grade">给我们评分</string>
    <string name="website">网站</string>
    <string name="GitHub">GitHub</string>
    <string name="opinion">意见反馈</string>
    <string name="author">MADE BY MOZRE</string>
    <string name="version">V0.1 Beta</string>
    <string name="sliding">>>>滑动解锁>>></string>
    <string name="hour">小时</string>
    <string name="containTask">包含任务</string>
    <string name="planDetail">计划详情</string>

    <string name="start">开始</string>
    <string name="Abandon_Pomo">是否取消该番茄?</string>
    <string name="Pomo_Finish">番茄完成</string>
    <string name="keep_focused">请保持专注</string>
    <string name="please_set_time">请先设置时间</string>
    <string name="login_email">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login">登陆</string>
    <string name="new_account_sign_up">新用户注册</string>
    <string name="please_input_email">请输入一个有效的电子邮件地址</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login_failed">登陆失败</string>
    <string name="landing">正在登陆</string>
    <string name="existing_account">已有账号? 去登陆</string>
    <string name="create_account">创建账户</string>
    <string name="re_enter_password">再输一次密码</string>
    <string name="mobile_number">手机号码</string>
    <string name="name">姓名</string>
    <string name="enter_valid_mobile_number">请输入有效的手机号码</string>
    <string name="password_do_not_match">密码不匹配</string>
    <string name="at_least_3_characters">至少三个字符</string>
    <string name="signup_failed">注册失败</string>
    <string name="registering">正在注册</string>
    <string name="edt_login_name">用户名</string>
    <string name="edt_login_password">密 码</string>
    <string name="btn_register">设置IP</string>
    <string name="btn_login">登 录</string>
    <string name="edt_register_name">Username</string>
    <string name="edt_register_email">E-mail</string>
    <string name="edt_register_password">Password</string>
    <string name="edt_register_confirm">Confirm Password</string>
    <string name="edt_register_phone">Phone</string>
    <string name="btn_register_submit">立即注册</string>
</resources>
